Tooltip boundary overflow fix

--- a/src/features/tooltip/components/Tooltip.css
+++ b/src/features/tooltip/components/Tooltip.css
@@ -9,8 +9,8 @@
     position: absolute;
     pointer-events: none;
 
-    background-color: var(--background-2-transparent);
+    background-color: var(--background-4-transparent);
     backdrop-filter: blur(16px);
-    border-radius: 32px;
+    border-radius: 12px;
     z-index: 1000;
 }
